--- a/book/catalog.yml
+++ b/book/catalog.yml
@@ -3,5 +3,15 @@ PREDEF:
  - about_this_book.re
  - about_editor_extension.re
 CHAPS:
- - chapter1.re:
-   - cp1_attribute.re 
+ - part1.re:
+   - part1-menuitem.re
+ - part2.re:
+   - dummy2.re
+ - part3.re:
+   - dummy3.re
+ - part4.re:
+   - dummy4.re
+ - part5.re:
+   - dummy5.re
+ - part6.re:
+   - dummy6.re
