--- a/book/catalog.yml
+++ b/book/catalog.yml
@@ -6,6 +6,7 @@ CHAPS:
  - part1.re:
    - part1-menuitem.re
    - part1-editorwindow.re
+   - part1-editorgui.re
  - part2.re:
    - dummy2.re
  - part3.re:
