--- a/book/config.yml.template
+++ b/book/config.yml.template
@@ -31,20 +31,18 @@ rights: |
   (C) 2014 unity-bu.com
 # description: ブックの説明
 description: Unityのエディタ拡張入門
-
+contact: anchan828@gmail.com
 #
 # coverfile: カバーページのbody要素内に挿入する内容を記述したファイル名
-#
+#coverfile: unibook2-cover.html
 # coverimage: cover.png
-#
+coverimage: cover.jpg
 # 固有IDに使用するドメイン。指定しない場合には、時刻に基づくランダムUUIDが入る
-# urnid: urn:uid:http://example.com/some-book-title/1.0.2/
+#urnid: http://unibook2.unity-bu.com/
 # CSSファイル (yamlファイルおよびRe:VIEWファイルを置いたディレクトリにあること)
 #stylesheet: stylesheet.css
-# LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
-texstyle: bookmacro
-# LaTeX用のdocumentclassを指定する
-texdocumentclass: ["jsbook", "a5paper,twoside,12pt"]
+
+
 # LaTeX用のコマンドを指定する(platex or lualatex)
 # texcommand: "platex"
 # 目次として抽出するレベル
@@ -66,10 +64,17 @@ colophon: true
 # XHTML生成後に実行するプログラム。$1:HTMLの生成されたディレクトリ $2:Re:VIEWファイルのあるディレクトリ $3:起動時指定のyamlファイル名
 # posthook: hook.sh
 # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
-# cover_linear: yes
+cover_linear: yes
 # review-compileに渡すパラメータ
 #params: --stylesheet=stylesheet.css
 # Pygmentsカラーリングを利用する (pygments外部gemが必要)
 # pygments: true
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
-debug: null
+#hook_afterbody: "./hook_afterbody.sh"
+
+#pubhistory: |
+#  2014年12月30日 コミックマーケット87版発行
+
+
+# LaTeX用のdocumentclassを指定する
+# LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
