--- a/book/catalog.yml
+++ b/book/catalog.yml
@@ -1,11 +1,13 @@
 PREDEF:
  - introduction.re
  - about_this_book.re
- - about_editor_extension.re
 CHAPS:
+ - summary_editor_extension.re
  - part1-editorgui.re
  - part1-editorwindow.re
  - part1-menuitem.re
  - part2-beginner.re
  - part2-standardextension.re
  - part3-usefulextensions.re
+ - overwriter.re
+ - assetpostprocessor.re
