--- a/book/config.yml.template
+++ b/book/config.yml.template
@@ -68,7 +68,7 @@ cover_linear: yes
 # review-compileに渡すパラメータ
 #params: --stylesheet=stylesheet.css
 # Pygmentsカラーリングを利用する (pygments外部gemが必要)
-# pygments: true
+pygments: true
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
 #hook_afterbody: "./hook_afterbody.sh"
 
