--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6"
+    "shelljs": "^0.3.0"
   }
 }
