--- a/book/config.yml.template
+++ b/book/config.yml.template
@@ -64,7 +64,8 @@ colophon: true
 # XHTML生成後に実行するプログラム。$1:HTMLの生成されたディレクトリ $2:Re:VIEWファイルのあるディレクトリ $3:起動時指定のyamlファイル名
 # posthook: hook.sh
 # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
-cover_linear: yes
+epubmaker:
+  cover_linear: yes
 # review-compileに渡すパラメータ
 #params: --stylesheet=stylesheet.css
 # Pygmentsカラーリングを利用する (pygments外部gemが必要)
