--- a/book/config.yml.template
+++ b/book/config.yml.template
@@ -69,7 +69,9 @@ epubmaker:
 # review-compileに渡すパラメータ
 #params: --stylesheet=stylesheet.css
 # Pygmentsカラーリングを利用する (pygments外部gemが必要)
-pygments: true
+highlight:
+   html: pygments
+   latex: listings
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
 #hook_afterbody: "./hook_afterbody.sh"
 
